fix read more buttons

--- a/source/css/_custom/custom.styl
+++ b/source/css/_custom/custom.styl
@@ -68,6 +68,15 @@ a
     &:before {display: none !important;}
     &:hover {color: $blue}
 
+.post-more-link a
+  border: 1px solid #789
+  padding: 4px 12px
+  border-radius: 3px
+
+  &:hover
+    color $blue
+    border-color $blue
+
 // CODE
 .post pre, .post .highlight 
   letter-spacing 0
@@ -96,7 +105,7 @@ a
 // ARTICLE LIST
 .posts-expand .post
   border-bottom: 1px solid #abc;
-  padding-bottom 50px
+  padding-bottom 80px
 
 // SIDEBAR
 .sidebar
